--- a/TripleTen/Proyecto_Sprint1/Project_Sprint1.ipynb
+++ b/TripleTen/Proyecto_Sprint1/Project_Sprint1.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -599,7 +599,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['mike_reed'], 32, ['kate', 'morgan'], 24, ['john', 'doe'], 37]\n"
+      "[['mike', 'reed'], 32, ['kate', 'morgan'], 24, ['john', 'doe'], 37]\n"
      ]
     }
    ],
@@ -614,21 +614,18 @@
     "\n",
     "\n",
     "# Procesa al primer usuario\n",
-    "user_name_1 = users[0][1].replace('_', ' ').strip()\n",
+    "user_name_1 = users[0][1].replace('_', ' ').strip().split()\n",
     "user_age_1 = int(users[0][2])\n",
-    "user_name_1 = users[0][1].split()\n",
     "users_clean.extend([user_name_1, user_age_1])\n",
     "\n",
     "# Procesa al segundo usuario\n",
-    "user_name_2 = users[1][1].replace('_', ' ').strip()\n",
+    "user_name_2 = users[1][1].replace('_', ' ').strip().split()\n",
     "user_age_2 = int(users[1][2])\n",
-    "user_name_2 = users[1][1].split()\n",
     "users_clean.extend([user_name_2, user_age_2])\n",
     "\n",
     "# Procesa al tercer usuario\n",
-    "user_name_3 = users[2][1].replace('_', ' ').strip()\n",
+    "user_name_3 = users[2][1].replace('_', ' ').strip().split()\n",
     "user_age_3 = int(users[2][2])\n",
-    "user_name_3 = users[2][1].split()\n",
     "users_clean.extend([user_name_3, user_age_3])\n",
     "\n",
     "\n",
