--- a/Python tutorial/Python_Boolean.ipynb
+++ b/Python tutorial/Python_Boolean.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Most Values are True\n",
+    "##### __Most Values are True__\n",
     "Almost any value is evaluated to True if it has some sort of content.\n",
     "\n",
     "Any string is True, except empty strings.\n",
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Functions can return a Boolean"
+    "##### __Functions can return a Boolean__"
    ]
   },
   {
