--- a/Python tutorial/Python_Operators.ipynb
+++ b/Python tutorial/Python_Operators.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python Arithmetic Operators\n",
+    "##### __Python Arithmetic Operators__\n",
     "\n",
     "Operator\tName\t      Example\n",
     "\n",
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python Assignment Operators\n",
+    "##### __Python Assignment Operators__\n",
     "\n",
     "Operator\tExample\tSame As\n",
     "\n",
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python Comparison Operators\n",
+    "##### __Python Comparison Operators__\n",
     "\n",
     "Operator\tName\tExample\t\n",
     "\n",
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python Logical Operators\n",
+    "##### __Python Logical Operators__\n",
     "\n",
     "Operator\tDescription\t                           Example\t\n",
     "and |\tReturns True if both statements are true |\tx < 5 and  x < 10\t\n",
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Python Identity Operators\n",
+    "#### __Python Identity Operators__\n",
     "\n",
     "Operator\tDescription \tExample\t \n",
     "\n",
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python Membership Operators\n",
+    "##### __Python Membership Operators__\n",
     "\n",
     "Operator\tDescription \tExample\t \n",
     "\n",
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Operator Precedence\n",
+    "##### __Operator Precedence__\n",
     "\n",
     "Operator\tDescription \n",
     "\n",
