--- a/Python tutorial/Python_Strings.ipynb
+++ b/Python tutorial/Python_Strings.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Multiline Strings"
+    "##### __Multiline Strings__"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Strings are Arrays"
+    "##### __Strings are Arrays__"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Loop through Strings"
+    "##### __Loop through Strings__"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### String length"
+    "##### __String length__"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Check String"
+    "##### __Check String__"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Slicing Strings\n",
+    "##### __Slicing Strings__\n",
     "Get the characters from position 2 to position 5 (not included)"
    ]
   },
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Modify Strings\n",
+    "##### __Modify Strings__\n",
     "Upper Case"
    ]
   },
@@ -390,7 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Place holder and modifiers"
+    "##### __Place holder and modifiers__"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Escape Characters\n",
+    "##### __Escape Characters__\n",
     "To insert characters that are illegal in a string, use an escape character.\n",
     "\n",
     "An escape character is a backslash \\ followed by the character you want to insert.\n",
@@ -574,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Python String Methods\n",
+    "##### __Python String Methods__\n",
     "\n",
     "Method\tDescription\n",
     "\n",
