--- a/Python tutorial/Python_variables.ipynb
+++ b/Python tutorial/Python_variables.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comments"
+    "### __Comments__"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variables\n",
+    "### __Variables__\n",
     "A variable name must start with a letter or the underscore character. \n",
     "\n",
     "A variable name cannot start with a number. \n",
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Casting\n",
+    "##### __Casting__\n",
     "Specify the data of a variable.\n",
     "Ensuring the correct Data Type or converting between Data types for operations and formatting Output."
    ]
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Get the Data Type"
+    "##### __Get the Data Type__"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### One value to multiple variables"
+    "##### __One value to multiple variables__"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Many values to multiple variables"
+    "##### __Many values to multiple variables__"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Unpack a collection"
+    "##### __Unpack a collection__"
    ]
   },
   {
@@ -239,12 +239,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Output variables"
+    "##### __Output variables__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -252,6 +252,7 @@
      "output_type": "stream",
      "text": [
       "Alice 25 New York\n",
+      "Alice is 25 years old, and lives in New York.\n",
       "Alice is 25 years old, and lives in New York.\n",
       "Alice is 25 years old, and lives in New York.\n"
      ]
@@ -264,14 +265,15 @@
     "\n",
     "print(name, age, city)\n",
     "print(name + \" is \" + str(age) + \" years old, and lives in \" + city + \".\")\n",
-    "print(f\"{name} is {age} years old, and lives in {city}.\")"
+    "print(f\"{name} is {age} years old, and lives in {city}.\")\n",
+    "print(\"{} is {} years old, and lives in {}.\".format(name, age, city))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Global variables\n",
+    "##### __Global variables__\n",
     "Variables that are created outside of a function. \n",
     "\n",
     "Normally, when you create a variable inside a function, that variable is local, and can only be used inside that function.\n",
