--- a/Python tutorial/Python_Lists.ipynb
+++ b/Python tutorial/Python_Lists.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Lists are created using square brackets: []\n",
     "\n",
-    "List items are ordered, changeable, and allow duplicate values.\n",
+    "List items are _ordered, changeable, and allow duplicate values._\n",
     "\n",
     "List items are indexed, the first item has index [0], the second item has index [1] etc.\n",
     "\n",
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### List Length"
+    "#### __List Length__"
    ]
   },
   {
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### List type()"
+    "##### __List type()__"
    ]
   },
   {
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### List Constructor"
+    "##### __List Constructor__"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Access List Items"
+    "##### __Access List Items__"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Check if item exists"
+    "##### __Check if item exists__"
    ]
   },
   {
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Change List Items"
+    "##### __Change List Items__"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Insert Items\n",
+    "##### __Insert Items__\n",
     "\n",
     "To insert a new list item, without replacing any of the existing values, we can use the insert() method."
    ]
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Add List Items"
+    "##### __Add List Items__"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Remove List Items"
+    "##### __Remove List Items__"
    ]
   },
   {
