--- a/Python tutorial/Python_Lists.ipynb
+++ b/Python tutorial/Python_Lists.ipynb
@@ -523,6 +523,453 @@
     "thislist.clear()\n",
     "print(thislist)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Loop Lists__\n",
+    "\n",
+    "The iterable(i) created in the example bellow is [0, 1, 2]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n",
+      "\n",
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "for x in thislist:\n",
+    "  print(x)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "for i in range(len(thislist)):\n",
+    "  print(thislist[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "i = 0\n",
+    "while i < len(thislist):\n",
+    "  print(thislist[i])\n",
+    "  i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Looping using List Comprehension__\n",
+    "\n",
+    "List Comprehension offers the shortest syntax for looping through lists:\n",
+    "\n",
+    "newlist = [expression for item in iterable if condition == True]\n",
+    "\n",
+    "The return value is a new list, leaving the old list unchanged.\n",
+    "\n",
+    "The condition is like a filter that only accepts the items that evaluate to True\n",
+    "\n",
+    "The iterable can be any iterable object, like a list, tuple, set etc.\n",
+    "\n",
+    "The expression is the current item in the iteration, but it is also the outcome, which you can manipulate before it ends up like a list item in the new list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "cherry\n",
+      "\n",
+      "['apple', 'banana', 'mango']\n",
+      "\n",
+      "['apple', 'banana', 'mango']\n",
+      "\n",
+      "[0, 1, 2, 3, 4]\n",
+      "['APPLE', 'BANANA', 'CHERRY', 'KIWI', 'MANGO']\n",
+      "['hello', 'hello', 'hello', 'hello', 'hello']\n",
+      "['apple', 'orange', 'cherry', 'kiwi', 'mango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "[print(x) for x in thislist]\n",
+    "print()\n",
+    "\n",
+    "# without list comprehension\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
+    "newlist = []\n",
+    "\n",
+    "for x in fruits:\n",
+    "  if \"a\" in x:\n",
+    "    newlist.append(x)\n",
+    "\n",
+    "print(newlist)\n",
+    "print()\n",
+    "\n",
+    "# with list comprehension\n",
+    "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
+    "\n",
+    "newlist = [x for x in fruits if \"a\" in x]\n",
+    "\n",
+    "print(newlist)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "newlist = [x for x in range(10) if x < 5]\n",
+    "print(newlist)\n",
+    "\n",
+    "newlist = [x.upper() for x in fruits]\n",
+    "print(newlist)\n",
+    "\n",
+    "newlist = ['hello' for x in fruits]\n",
+    "print(newlist)\n",
+    "\n",
+    "newlist = [x if x != \"banana\" else \"orange\" for x in fruits]\n",
+    "print(newlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Sort Lists__\n",
+    "\n",
+    "List objects have a _sort() method_ that will sort the list alphanumerically, ascending, by default."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'kiwi', 'mango', 'orange', 'pineapple']\n",
+      "\n",
+      "[23, 50, 65, 82, 100]\n",
+      "\n",
+      "['pineapple', 'orange', 'mango', 'kiwi', 'banana']\n",
+      "\n",
+      "[100, 82, 65, 50, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"orange\", \"mango\", \"kiwi\", \"pineapple\", \"banana\"]\n",
+    "thislist.sort()\n",
+    "print(thislist)\n",
+    "print()\n",
+    "\n",
+    "thislist = [100, 50, 65, 82, 23]\n",
+    "thislist.sort()\n",
+    "print(thislist)\n",
+    "print()\n",
+    "\n",
+    "thislist = [\"orange\", \"mango\", \"kiwi\", \"pineapple\", \"banana\"]\n",
+    "thislist.sort(reverse = True)\n",
+    "print(thislist)\n",
+    "print()\n",
+    "\n",
+    "thislist = [100, 50, 65, 82, 23]\n",
+    "thislist.sort(reverse = True)\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Customize Sort Function_\n",
+    "\n",
+    "Sort the list based on how close the number is to 50:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[50, 65, 23, 82, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(n):\n",
+    "  return abs(n - 50)\n",
+    "\n",
+    "thislist = [100, 50, 65, 82, 23]\n",
+    "thislist.sort(key = myfunc)\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Case Insensitive Sort_\n",
+    "\n",
+    "By default the sort() method is case sensitive, resulting in all capital letters being sorted before lower case letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Kiwi', 'Orange', 'banana', 'cherry']\n",
+      "\n",
+      "['banana', 'cherry', 'Kiwi', 'Orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"banana\", \"Orange\", \"Kiwi\", \"cherry\"]\n",
+    "thislist.sort()\n",
+    "print(thislist)\n",
+    "print()\n",
+    "\n",
+    "thislist = [\"banana\", \"Orange\", \"Kiwi\", \"cherry\"]\n",
+    "thislist.sort(key = str.lower)\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Reverse Order_\n",
+    "\n",
+    "What if you want to reverse the order of a list, regardless of the alphabet?\n",
+    "\n",
+    "The reverse() method reverses the current sorting order of the elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cherry', 'Kiwi', 'Orange', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"banana\", \"Orange\", \"Kiwi\", \"cherry\"]\n",
+    "thislist.reverse()\n",
+    "print(thislist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Copy Lists__\n",
+    "\n",
+    "You cannot copy a list simply by typing list2 = list1, because: list2 will only be a reference to list1, and changes made in list1 will automatically also be made in list2.\n",
+    "\n",
+    "You can use the built-in List method copy() to copy a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "mylist = thislist.copy()\n",
+    "print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way to make a copy is to use the built-in method list()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "mylist = list(thislist)\n",
+    "print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also make a copy of a list by using the : (slice) operator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry']\n"
+     ]
+    }
+   ],
+   "source": [
+    "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "mylist = thislist[:]\n",
+    "print(mylist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Join Lists__\n",
+    "\n",
+    "There are several ways to join, or concatenate, two or more lists in Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [\"a\", \"b\", \"c\"]\n",
+    "list2 = [1, 2, 3]\n",
+    "\n",
+    "list3 = list1 + list2\n",
+    "print(list3)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "list1 = [\"a\", \"b\" , \"c\"]\n",
+    "list2 = [1, 2, 3]\n",
+    "\n",
+    "for x in list2:\n",
+    "  list1.append(x)\n",
+    "\n",
+    "print(list1)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "list1 = [\"a\", \"b\" , \"c\"]\n",
+    "list2 = [1, 2, 3]\n",
+    "\n",
+    "list1.extend(list2)\n",
+    "print(list1)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Reverse Lists__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cherry', 'banana', 'apple']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apple', 'banana', 'cherry']\n",
+    "\n",
+    "fruits.reverse()\n",
+    "\n",
+    "print(fruits)"
+   ]
   }
  ],
  "metadata": {
