--- a/Python tutorial/Python_Sets.ipynb
+++ b/Python tutorial/Python_Sets.ipynb
@@ -17,15 +17,645 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'cherry', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "print(thisset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set items can appear in a different order every time you use them, and cannot be referred to by index or key.\n",
+    "\n",
+    "Set items are unchangeable, meaning that we cannot change the items after the set has been created.\n",
+    "\n",
+    "Sets cannot have two items with the same value."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'cherry', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\", \"apple\"}\n",
+    "print(thisset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: The values True and 1 are considered the same value in sets, and are treated as duplicates\n",
+    "\n",
+    "The values False and 0 are considered the same value in sets, and are treated as duplicates:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 2, True, 'cherry', 'banana'}\n",
+      "\n",
+      "{False, 'apple', True, 'cherry', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\", True, 1, 2}\n",
+    "print(thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\", False, True, 0}\n",
+    "print(thisset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Length of a Set__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "print(len(thisset))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Type of a Set__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "myset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "print(type(myset))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Set() Constructor__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'cherry', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = set((\"apple\", \"banana\", \"cherry\")) # note the double round-brackets\n",
+    "print(thisset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Access Items__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "cherry\n",
+      "banana\n",
+      "\n",
+      "True\n",
+      "\n",
+      "False\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "\n",
+    "for x in thisset:\n",
+    "  print(x)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "print(\"banana\" in thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "print(\"banana\" not in thisset)\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Change Items__\n",
+    "\n",
+    "_Once a set is created, you cannot change its items, but you can add new items._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Add Items__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'orange', 'apple', 'cherry', 'banana'}\n",
+      "\n",
+      "{'apple', 'mango', 'papaya', 'pineapple', 'cherry', 'banana'}\n",
+      "\n",
+      "{'apple', 'banana', 'kiwi', 'orange', 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "thisset.add(\"orange\")\n",
+    "print(thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "tropical = {\"pineapple\", \"mango\", \"papaya\"}\n",
+    "thisset.update(tropical)\n",
+    "print(thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "mylist = [\"kiwi\", \"orange\"]\n",
+    "thisset.update(mylist)\n",
+    "print(thisset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Remove Items__\n",
+    "\n",
+    "Note: If the item to remove does not exist, remove() will raise an error.\n",
+    "\n",
+    "If the item to remove does not exist, discard() will NOT raise an error.\n",
+    "\n",
+    "Sets are unordered, so when using the pop() method, you do not know which item that gets removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'cherry'}\n",
+      "\n",
+      "{'apple', 'cherry'}\n",
+      "\n",
+      "apple\n",
+      "{'cherry', 'banana'}\n",
+      "\n",
+      "set()\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'thisset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     21\u001b[39m thisset = {\u001b[33m\"\u001b[39m\u001b[33mapple\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mbanana\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mcherry\u001b[39m\u001b[33m\"\u001b[39m}\n\u001b[32m     22\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m thisset\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mthisset\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'thisset' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "thisset.remove(\"banana\")\n",
+    "print(thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "thisset.discard(\"banana\")\n",
+    "print(thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "x = thisset.pop()\n",
+    "print(x)\n",
+    "print(thisset)\n",
+    "print()\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "thisset.clear()\n",
+    "print(thisset)\n",
+    "\n",
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "del thisset\n",
+    "print(thisset)#this will raise an error because the set no longer exists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Loop Sets__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "cherry\n",
+      "banana\n"
+     ]
+    }
+   ],
+   "source": [
+    "thisset = {\"apple\", \"banana\", \"cherry\"}\n",
+    "for x in thisset:\n",
+    "  print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Join Sets__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Union, The union() method returns a new set with all items from both sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 'b', 'a', 'c'}\n",
+      "\n",
+      "{1, 2, 3, 'b', 'a', 'c'}\n",
+      "\n",
+      "{1, 2, 3, 'apple', 'Elena', 'a', 'John', 'c', 'bananas', 'b', 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"a\", \"b\", \"c\"}\n",
+    "set2 = {1, 2, 3}\n",
+    "\n",
+    "set3 = set1.union(set2)\n",
+    "print(set3)\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "set1 = {\"a\", \"b\", \"c\"}\n",
+    "set2 = {1, 2, 3}\n",
+    "set3 = set1 | set2\n",
+    "print(set3)\n",
+    "print()\n",
+    "\n",
+    "set1 = {\"a\", \"b\", \"c\"}\n",
+    "set2 = {1, 2, 3}\n",
+    "set3 = {\"John\", \"Elena\"}\n",
+    "set4 = {\"apple\", \"bananas\", \"cherry\"}\n",
+    "myset = set1.union(set2, set3, set4)\n",
+    "print(myset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Update, The update() method inserts all items from one set into another. The update() changes the original set, and does not return a new set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 'b', 'a', 'c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"a\", \"b\" , \"c\"}\n",
+    "set2 = {1, 2, 3}\n",
+    "set1.update(set2)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Note: Both union() and update() will exclude any duplicate items.__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intersection, Keep ONLY the duplicates.\n",
+    "\n",
+    "The intersection() method will return a new set, that only contains the items that are present in both sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple'}\n",
+      "\n",
+      "{'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set3 = set1.intersection(set2)\n",
+    "print(set3)\n",
+    "print()\n",
+    "\n",
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set3 = set1 & set2\n",
+    "print(set3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The intersection_update() method will also keep ONLY the duplicates, but it will change the original set instead of returning a new set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set1.intersection_update(set2)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Difference, The difference() method will return a new set that will contain only the items from the first set that are not present in the other set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cherry', 'banana'}\n",
+      "\n",
+      "{'cherry', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set3 = set1.difference(set2)\n",
+    "print(set3)\n",
+    "print()\n",
+    "\n",
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set3 = set1 - set2\n",
+    "print(set3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The difference_update() method will also keep the items from the first set that are not in the other set, but it will change the original set instead of returning a new set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cherry', 'banana'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set1.difference_update(set2)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The symmetric_difference() method will keep only the elements that are NOT present in both sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'microsoft', 'banana', 'google', 'cherry'}\n",
+      "\n",
+      "{'microsoft', 'banana', 'google', 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set3 = set1.symmetric_difference(set2)\n",
+    "print(set3)\n",
+    "print()\n",
+    "\n",
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set3 = set1 ^ set2\n",
+    "print(set3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The symmetric_difference_update() method will also keep all but the duplicates, but it will change the original set instead of returning a new set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'microsoft', 'banana', 'google', 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {\"apple\", \"banana\", \"cherry\"}\n",
+    "set2 = {\"google\", \"microsoft\", \"apple\"}\n",
+    "set1.symmetric_difference_update(set2)\n",
+    "print(set1)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python-VENV-fXy5dZEI",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
