--- a/Python tutorial/Python_Conditions.ipynb
+++ b/Python tutorial/Python_Conditions.ipynb
@@ -108,6 +108,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False Eres niño.\n",
+      "False Eres adolescente.\n",
+      "True Eres adulto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "age = randint(0, 100)\n",
+    "\n",
+    "# Comprueba si la edad se encuentra entre 0 y 12\n",
+    "print(age >= 0 and age <= 12, \"Eres niño.\")\n",
+    "\n",
+    "# Comprueba si la edad se encuentra entre 13 y 19\n",
+    "print(age >= 13 and age <= 19, \"Eres adolescente.\")\n",
+    "\n",
+    "# Comprueba si la edad es 20 o más\n",
+    "print(age >= 20, \"Eres adulto.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AZi]!3e7$?\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import string\n",
+    "\n",
+    "# Define possible characters: letters, digits, and special characters\n",
+    "characters = string.ascii_letters + string.digits + string.punctuation\n",
+    "\n",
+    "# Generate a random string of length 10\n",
+    "random_string = ''.join(random.choices(characters, k=10))\n",
+    "print(random_string)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -312,6 +367,35 @@
     "\n",
     "if b > a:\n",
     "  pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### _Functions for comaprison_\n",
+    "\n",
+    "Method\tChecks for\n",
+    "\n",
+    "isdigit()\tOnly digits (0-9), Returns True if the string consists only of digit characters.\n",
+    "\n",
+    "isalpha()\tOnly letters (A-Z, a-z), Returns True if all characters are letters, otherwise False.\n",
+    "\n",
+    "isalnum()\tLetters and digits, Returns True if the string contains only letters and numbers, but no spaces or special characters.\n",
+    "\n",
+    "islower()\tAll lowercase letters, Returns True if all letters are in lowercase.\n",
+    "\n",
+    "isupper()\tAll uppercase letters, Returns True if all letters are in uppercase.\n",
+    "\n",
+    "isspace()\tOnly whitespace characters, Returns True if the string contains only whitespace.\n",
+    "\n",
+    "istitle()\tTitle case format, Checks if the string follows title case (each word starts with an uppercase letter and the rest are lowercase).\n",
+    "\n",
+    "isdecimal()\tDecimal numbers (0-9), Checks if all characters in the string are decimal numbers (0-9, used in numeric representations).\n",
+    "\n",
+    "isnumeric()\tAny numeric characters (including fractions, superscripts)\n",
+    "\n",
+    "isascii()\tOnly ASCII characters"
    ]
   }
  ],
