--- a/Exercises/StudentGradeManagementSystem.ipynb
+++ b/Exercises/StudentGradeManagementSystem.ipynb
@@ -517,6 +517,30 @@
     "\n",
     "print(incomes_per_field)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = [1, \"aBc\", 23, \"c\", 14.5]\n",
+    "\n",
+    "for l in range(len(lst)):\n",
+    "    print(l)"
+   ]
   }
  ],
  "metadata": {
