--- a/Python tutorial/Aug_Int_Func.ipynb
+++ b/Python tutorial/Aug_Int_Func.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
       "All:  False\n",
       "Any:  True\n",
       "Enumerate:  [(0, 'a'), (1, 'b'), (2, 'c')]\n",
-      "Zip:  <zip object at 0x000001B2870E0040>\n",
+      "Zip:  [(1, 'a'), (2, 'b'), (3, 'c')]\n",
       "Is instance:  True\n",
       "A\n",
       "filter: [1, 3, 5]\n",
@@ -139,7 +139,7 @@
     "\n",
     "print(\"Enumerate: \", list(enumerate(['a', 'b', 'c']))) # Returns a list of tuples containing indices and values from the iterable.\n",
     "\n",
-    "print(\"Zip: \", zip([1, 2, 3], ['a', 'b', 'c'])) # Combines multiple iterables (e.g., lists) element-wise, returning tuples.\n",
+    "print(\"Zip: \", list(zip([1, 2, 3], ['a', 'b', 'c']))) # Combines multiple iterables (e.g., lists) element-wise, returning tuples.\n",
     "\n",
     "print(\"Is instance: \", isinstance(5, int)) # Returns True if the specified object is of the specified type, otherwise False.\n",
     "\n",
