--- a/Python tutorial/Python_Lists.ipynb
+++ b/Python tutorial/Python_Lists.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python Lists\n",
+    "### __Python Lists__\n",
     "\n",
     "Lists are used to store multiple items in a single variable.\n",
     "\n",
