--- a/Python tutorial/Python_Dictionaries.ipynb
+++ b/Python tutorial/Python_Dictionaries.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -253,6 +253,8 @@
      "output_type": "stream",
      "text": [
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red'}\n",
+      "\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red', 'wheels': 4, 'material': 'aluminium'}\n",
       "\n",
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red', 'wheels': 4, 'material': 'aluminium'}\n"
      ]
@@ -268,6 +270,12 @@
     "print(thisdict)\n",
     "\n",
     "print()\n",
+    "\n",
+    "thisdict.update({\"wheels\": 4, \"material\" : \"aluminium\"})\n",
+    "print(thisdict)\n",
+    "\n",
+    "print()\n",
+    "\n",
     "\n",
     "thisdict.update({\"wheels\": 4, \"material\" : \"aluminium\"})\n",
     "print(thisdict)\n"
