--- a/TripleTen/Project_Sprint2/Project_Sprint2.ipynb
+++ b/TripleTen/Project_Sprint2/Project_Sprint2.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "id": "eVBfoyx7Jm9X"
    },
@@ -447,13 +447,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Se ha añadido una compra de 48, monto actual = 1328.\n",
-      "Se ha añadido una compra de 59, monto actual = 1387.\n",
-      "Se ha añadido una compra de 48, monto actual = 1435.\n",
-      "Se ha añadido una compra de 46, monto actual = 1481.\n",
-      "Se ha añadido una compra de 52, monto actual = 1533.\n",
+      "Se ha añadido una compra de 36, monto actual = 1316.\n",
+      "Se ha añadido una compra de 49, monto actual = 1365.\n",
+      "Se ha añadido una compra de 32, monto actual = 1397.\n",
+      "Se ha añadido una compra de 57, monto actual = 1454.\n",
+      "Se ha añadido una compra de 43, monto actual = 1497.\n",
+      "Se ha añadido una compra de 67, monto actual = 1564.\n",
       "Se ha alcanzado el monto objetivo de 1500.\n",
-      "1533\n"
+      "1564\n"
      ]
     }
    ],
@@ -496,11 +497,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "pn5WkcpJJm9Z"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "29\n",
+      "26\n",
+      "22\n",
+      "28\n"
+     ]
+    }
+   ],
    "source": [
     "users = [['32415', ['mike', 'reed'], 32, ['electronics', 'sport', 'books'], [894, 213, 173]],\n",
     "         ['31980', ['kate', 'morgan'], 24, ['clothes', 'books'], [439, 390]],\n",
@@ -514,7 +527,8 @@
     "         ['34278', ['james', 'lee'], 28, ['beauty', 'clothes', 'electronics'], [189, 299, 579]]]\n",
     "\n",
     "\n",
-    "# escribe tu código aquí"
+    "for x in (list(user[2] for user in users if user[2] < 30)):\n",
+    "    print(x)\n"
    ]
   },
   {
@@ -541,11 +555,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "4oAW1QDFJm9Z"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "samantha smith\n",
+      "james lee\n"
+     ]
+    }
+   ],
    "source": [
     "users = [['32415', ['mike', 'reed'], 32, ['electronics', 'sport', 'books'], [894, 213, 173]],\n",
     "         ['31980', ['kate', 'morgan'], 24, ['clothes', 'books'], [439, 390]],\n",
@@ -558,7 +581,8 @@
     "         ['34009', ['lisa', 'wilson'], 35, ['home', 'books', 'clothes'], [329, 189, 329]],\n",
     "         ['34278', ['james', 'lee'], 28, ['beauty', 'clothes', 'electronics'], [189, 299, 579]]]\n",
     "\n",
-    "# escribe tu código aquí"
+    "for x in list(user[1] for user in users if user[2] < 30 and sum(user[-1]) > 1000):\n",
+    "    print(x[0], x[-1])"
    ]
   },
   {
@@ -585,11 +609,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "id": "oSLk86udJm9d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kate morgan 24\n",
+      "samantha smith 29\n",
+      "maria garcia 33\n",
+      "lisa wilson 35\n",
+      "james lee 28\n"
+     ]
+    }
+   ],
    "source": [
     "users = [['32415', ['mike', 'reed'], 32, ['electronics', 'sport', 'books'], [894, 213, 173]],\n",
     "         ['31980', ['kate', 'morgan'], 24, ['clothes', 'books'], [439, 390]],\n",
@@ -602,7 +638,9 @@
     "         ['34009', ['lisa', 'wilson'], 35, ['home', 'books', 'clothes'], [329, 189, 329]],\n",
     "         ['34278', ['james', 'lee'], 28, ['beauty', 'clothes', 'electronics'], [189, 299, 579]]]\n",
     "\n",
-    "# escribe tu código aquí"
+    "filtered_users  = [(user[1], user[2]) for user in users if \"clothes\" in user[3]]\n",
+    "for name, age in filtered_users:\n",
+    "    print(name[0], name[-1], age)"
    ]
   },
   {
