--- a/TripleTen/Project_Sprint2/Project_Sprint2.ipynb
+++ b/TripleTen/Project_Sprint2/Project_Sprint2.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "RN6LIlHelWvr"
    },
@@ -93,7 +93,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['32415', ['mike_reed'], 32, ['ELECTRONICS', 'SPORT', 'BOOKS'], [894, 213, 173]]\n"
+      "['32415', ['mike', 'reed'], 32, ['ELECTRONICS', 'SPORT', 'BOOKS'], [894, 213, 173]]\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
     "    user_age_1 = int(user_info[age_index])\n",
     "\n",
     "    # Paso 3: separa el nombre y el apellido en una sublista\n",
-    "    user_name_1 = user_info[name_index].split()\n",
+    "    user_name_1 = user_name_1.split()\n",
     "\n",
     "    # Prepara la lista con la información completa del usuario\n",
     "    # Reemplaza el nombre y la edad originales con los datos limpios\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "id": "ioGD_Cs5r8ra"
    },
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['32415', ['mike_reed'], 32, ['electronics', 'sport', 'books'], [894, 213, 173]], ['31980', ['kate', 'morgan'], 24, ['clothes', 'books'], [439, 390]], ['32156', ['john', 'doe'], 37, ['electronics', 'home', 'food'], [459, 120, 99]], ['32761', ['SAMANTHA', 'SMITH'], 29, ['clothes', 'electronics', 'beauty'], [299, 679, 85]], ['32984', ['David', 'White'], 41, ['books', 'home', 'sport'], [234, 329, 243]], ['33001', ['emily', 'brown'], 26, ['beauty', 'home', 'food'], [213, 659, 79]], ['33767', ['Maria', 'Garcia'], 33, ['clothes', 'food', 'beauty'], [499, 189, 63]], ['33912', ['JOSE', 'MARTINEZ'], 22, ['sport', 'electronics', 'home'], [259, 549, 109]], ['34009', ['lisa', 'wilson'], 35, ['home', 'books', 'clothes'], [329, 189, 329]], ['34278', ['James', 'Lee'], 28, ['beauty', 'clothes', 'electronics'], [189, 299, 579]]]\n"
+      "[['32415', ['mike', 'reed'], 32, ['electronics', 'sport', 'books'], [894, 213, 173]], ['31980', ['kate', 'morgan'], 24, ['clothes', 'books'], [439, 390]], ['32156', ['john', 'doe'], 37, ['electronics', 'home', 'food'], [459, 120, 99]], ['32761', ['samantha', 'smith'], 29, ['clothes', 'electronics', 'beauty'], [299, 679, 85]], ['32984', ['david', 'white'], 41, ['books', 'home', 'sport'], [234, 329, 243]], ['33001', ['emily', 'brown'], 26, ['beauty', 'home', 'food'], [213, 659, 79]], ['33767', ['maria', 'garcia'], 33, ['clothes', 'food', 'beauty'], [499, 189, 63]], ['33912', ['jose', 'martinez'], 22, ['sport', 'electronics', 'home'], [259, 549, 109]], ['34009', ['lisa', 'wilson'], 35, ['home', 'books', 'clothes'], [329, 189, 329]], ['34278', ['james', 'lee'], 28, ['beauty', 'clothes', 'electronics'], [189, 299, 579]]]\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
     "  user_age_1 = int(user_info[age_index])\n",
     "\n",
     "  # Paso 3: separa el nombre y el apellido en una sublista\n",
-    "  user_name_1 = user_info[name_index].split()\n",
+    "  user_name_1 = user_name_1.split()\n",
     "\n",
     "  # Paso 4: poner categorías en minúsculas\n",
     "  categories_low = [category.lower() for category in user_info[cat_index]]  \n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "id": "pn5WkcpJJm9Z"
    },
@@ -506,11 +506,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24\n",
-      "29\n",
-      "26\n",
-      "22\n",
-      "28\n"
+      "kate morgan\n",
+      "samantha smith\n",
+      "emily brown\n",
+      "jose martinez\n",
+      "james lee\n"
      ]
     }
    ],
@@ -527,8 +527,8 @@
     "         ['34278', ['james', 'lee'], 28, ['beauty', 'clothes', 'electronics'], [189, 299, 579]]]\n",
     "\n",
     "\n",
-    "for x in (list(user[2] for user in users if user[2] < 30)):\n",
-    "    print(x)\n"
+    "for x in (list(user[1] for user in users if user[2] < 30)):\n",
+    "    print(x[0], x[-1])\n"
    ]
   },
   {
@@ -703,14 +703,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "-Iqf7AcXJzCP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['32156', ['john', 'doe'], 37, 678]\n",
+      "['32984', ['david', 'white'], 41, 806]\n",
+      "['33001', ['emily', 'brown'], 26, 951]\n",
+      "['33912', ['jose', 'martinez'], 22, 917]\n",
+      "['34009', ['lisa', 'wilson'], 35, 847]\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_client_by_cat(# escribe tu código aquí\n",
-    "    # escribe tu código aquí\n",
+    "def get_client_by_cat(users, id_index, name_index, age_index, cat_index, amount_index, filter_category):\n",
+    "    \n",
+    "    matching_users = []\n",
+    "\n",
+    "    for user in users:\n",
+    "        \n",
+    "        if filter_category in user[cat_index]:\n",
+    "            matching_users.append([user[id_index], user[name_index], user[age_index], sum(user[amount_index])])\n",
+    "    \n",
+    "    return matching_users\n",
     "\n",
     "# La lista de usuarios\n",
     "users = [\n",
@@ -727,10 +747,11 @@
     "]\n",
     "\n",
     "# Llama a la función con la categoría 'home'\n",
-    "result = get_client_by_cat(# escribe tu código aquí\n",
     "\n",
-    "# Muestra en pantalla la lista que resulta\n",
-    "print(result)\n"
+    "results = get_client_by_cat(users, 0, 1, 2, 3, 4, 'home')\n",
+    "\n",
+    "for result in results:\n",
+    "    print(result)\n"
    ]
   },
   {
