--- a/Python tutorial/Python_Dictionaries.ipynb
+++ b/Python tutorial/Python_Dictionaries.ipynb
@@ -668,6 +668,426 @@
     "  else:\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Dictionary Methods__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "clear()\n",
+    "\n",
+    "Remove all elements from the car list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "car.clear()\n",
+    "\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "copy()\n",
+    "\n",
+    "Copy the dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "x = car.copy()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "fromkeys()\n",
+    "\n",
+    "The fromkeys() method returns a dictionary with the specified keys and the specified value\n",
+    "\n",
+    "_dict.fromkeys(keys, value)_\n",
+    "\n",
+    "Create a dictionary with 3 keys, all with the value 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'key1': 0, 'key2': 0, 'key3': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = ('key1', 'key2', 'key3')\n",
+    "y = 0\n",
+    "\n",
+    "thisdict = dict.fromkeys(x, y)\n",
+    "\n",
+    "print(thisdict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "get()\n",
+    "\n",
+    "The get() method returns the value of the item with the specified key.\n",
+    "\n",
+    "_dictionary.get(keyname, value_)\n",
+    "\n",
+    "Get the value of the \"model\" item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mustang\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "x = car.get(\"model\")\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "items()\n",
+    "\n",
+    "The items() method returns a view object. The view object contains the key-value pairs of the dictionary, as tuples in a list.\n",
+    "\n",
+    "The view object will reflect any changes done to the dictionary\n",
+    "\n",
+    "_dictionary.items()_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('brand', 'Ford'), ('model', 'Mustang'), ('year', 1964)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "x = car.items()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "keys()\n",
+    "\n",
+    "The keys() method returns a view object. The view object contains the keys of the dictionary, as a list.\n",
+    "\n",
+    "The view object will reflect any changes done to the dictionary\n",
+    "\n",
+    "_dictionary.keys()_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['brand', 'model', 'year'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "x = car.keys()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pop()\n",
+    "\n",
+    "The pop() method removes the specified item from the dictionary.\n",
+    "\n",
+    "The value of the removed item is the return value of the pop() method\n",
+    "\n",
+    "_dictionary.pop(keyname, defaultvalue)_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'year': 1964}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "car.pop(\"model\")\n",
+    "\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "popitem()\n",
+    "\n",
+    "The popitem() method removes the item that was last inserted into the dictionary. In versions before 3.7, the popitem() method removes a random item.\n",
+    "\n",
+    "The removed item is the return value of the popitem() method, as a tuple\n",
+    "\n",
+    "_dictionary.popitem()_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "car.popitem()\n",
+    "\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "setdefault()\n",
+    "\n",
+    "The setdefault() method returns the value of the item with the specified key.\n",
+    "\n",
+    "If the key does not exist, insert the key, with the specified value\n",
+    "\n",
+    "_dictionary.setdefault(keyname, value)_\n",
+    "\n",
+    "If the key exist, this parameter has no effect.\n",
+    "\n",
+    "If the key does not exist, this value becomes the key's value\n",
+    "\n",
+    "Default value None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mustang\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "x = car.setdefault(\"model\", \"Bronco\")\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "update()\n",
+    "\n",
+    "The update() method inserts the specified items to the dictionary.\n",
+    "\n",
+    "The specified items can be a dictionary, or an iterable object with key value pairs\n",
+    "\n",
+    "_dictionary.update(iterable)_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'White'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "car.update({\"color\": \"White\"})\n",
+    "\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "values()\n",
+    "\n",
+    "The values() method returns a view object. The view object contains the values of the dictionary, as a list.\n",
+    "\n",
+    "The view object will reflect any changes done to the dictionary\n",
+    "\n",
+    "_dictionary.values()_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['Ford', 'Mustang', 1964])\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = {\n",
+    "  \"brand\": \"Ford\",\n",
+    "  \"model\": \"Mustang\",\n",
+    "  \"year\": 1964\n",
+    "}\n",
+    "\n",
+    "x = car.values()\n",
+    "\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
