--- a/Python tutorial/Python_Dictionaries.ipynb
+++ b/Python tutorial/Python_Dictionaries.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
      "text": [
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red'}\n",
       "\n",
-      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red', 'wheels': 4, 'material': 'aluminium'}\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red', 'wheels': 4}\n",
       "\n",
       "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964, 'color': 'red', 'wheels': 4, 'material': 'aluminium'}\n"
      ]
@@ -271,7 +271,7 @@
     "\n",
     "print()\n",
     "\n",
-    "thisdict.update({\"wheels\": 4, \"material\" : \"aluminium\"})\n",
+    "thisdict.update({\"wheels\": 4})\n",
     "print(thisdict)\n",
     "\n",
     "print()\n",
@@ -1087,6 +1087,91 @@
     "x = car.values()\n",
     "\n",
     "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresos totales: $ 97.0\n",
+      "Producto más caro: Product_B (Precio actualizado a $18.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Diccionario anidado que representa productos\n",
+    "products = {\n",
+    "    'Product_A': {'price': 10, 'quantity': 2, 'discount': 0.1},\n",
+    "    'Product_B': {'price': 20, 'quantity': 1, 'discount': 0.05},\n",
+    "    'Product_C': {'price': 15, 'quantity': 5, 'discount': 0.2},\n",
+    "}\n",
+    "\n",
+    "total_income = 0\n",
+    "cost = 0\n",
+    "mexp = \"\"\n",
+    "\n",
+    "for p in products:\n",
+    "    total_income += (products[p].get(\"price\") * (1 - products[p].get(\"discount\"))) * products[p].get(\"quantity\")\n",
+    "    if  cost < (products[p].get(\"price\") * (1 - products[p].get(\"discount\"))):\n",
+    "        cost = (products[p].get(\"price\")) #* (1 - products[p].get(\"discount\")))\n",
+    "        mexp = p\n",
+    "\n",
+    "print(\"Ingresos totales: $\", total_income)\n",
+    "print(f\"Producto más caro: {mexp} (Precio actualizado a ${cost *(1 - 0.1)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Healthcare': [150000, 193000], 'Telecom': [250000, 310000], 'IT': [210000, 125000], 'Transportation': [340000, 225000, 415000], 'Marketing': [120000, 175000], 'Finance': [180000, 197000, 289000], 'Retail': [220000, 98000], 'Architecture': [160000, 85000], 'Education': [75000]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "clients = [\n",
+    "    [32456, \"Jack Wilson\", 32, 150000, \"Healthcare\"],\n",
+    "    [34591, \"Nina Brown\", 45, 250000, \"Telecom\"],\n",
+    "    [37512, \"Alex Smith\", 39, 210000, \"IT\"],\n",
+    "    [39591, \"Brian Perez\", 29, 340000, \"Transportation\"],\n",
+    "    [45123, \"Sarah Lee\", 28, 120000, \"Marketing\"],\n",
+    "    [47635, \"David Kim\", 36, 180000, \"Finance\"],\n",
+    "    [49571, \"Samantha Chen\", 42, 220000, \"Retail\"],\n",
+    "    [50391, \"Juan Rodriguez\", 31, 160000, \"Architecture\"],\n",
+    "    [34556, \"Lucas Hernandez\", 37, 75000, \"Education\"],\n",
+    "    [64291, \"Jessica Li\", 25, 125000, \"IT\"],\n",
+    "    [74512, \"Emma Davis\", 47, 197000, \"Finance\"],\n",
+    "    [83191, \"Sophia Perez\", 34, 225000, \"Transportation\"],\n",
+    "    [91023, \"Liam Kim\", 29, 98000, \"Retail\"],\n",
+    "    [96435, \"Ava Chen\", 31, 175000, \"Marketing\"],\n",
+    "    [100571, \"Noah Rodriguez\", 28, 85000, \"Architecture\"],\n",
+    "    [101321, \"Olivia Wilson\", 44, 310000, \"Telecom\"],\n",
+    "    [104556, \"William Brown\", 38, 289000, \"Finance\"],\n",
+    "    [105491, \"Emily Smith\", 29, 193000, \"Healthcare\"],\n",
+    "    [107512, \"Michael Perez\", 53, 415000, \"Transportation\"]\n",
+    "]\n",
+    "\n",
+    "incomes_per_field = {} # aquí colocarás los ingresos para cada campo\n",
+    "\n",
+    "for client in clients:\n",
+    "    \n",
+    "\tif incomes_per_field.get(client[-1]) == None:\n",
+    "\t\tincomes_per_field[client[-1]] = []\n",
+    "\t\tincomes_per_field[client[-1]].append(client[3])\n",
+    "\telse:\n",
+    "\t\tincomes_per_field[client[-1]].append(client[3])\n",
+    "\n",
+    "print(incomes_per_field)"
    ]
   }
  ],
