--- a/Python tutorial/Python_Lists.ipynb
+++ b/Python tutorial/Python_Lists.ipynb
@@ -23,19 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'banana', 'cherry']\n"
+      "['apple', 'banana', 'cherry']\n",
+      "['avocado']\n"
      ]
     }
    ],
    "source": [
     "thislist = [\"apple\", \"banana\", \"cherry\"]\n",
+    "\n",
+    "print(thislist)\n",
+    "\n",
+    "thislist = [\"avocado\"]\n",
     "\n",
     "print(thislist)"
    ]
@@ -982,6 +987,18 @@
     "fruits.reverse()\n",
     "\n",
     "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [1, \"aBc\", 23, \"c\", 14.5]\n",
+    "\n",
+    "for l in range(len(lst)):\n",
+    "    print(l)"
    ]
   }
  ],
