--- a/Python tutorial/Python_Tuples.ipynb
+++ b/Python tutorial/Python_Tuples.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,8 @@
      "output_type": "stream",
      "text": [
       "('apple', 'banana', 'cherry') (1, 5, 7, 9, 3) (True, False, False)\n",
-      "('abc', 34, True, 40, 'male')\n"
+      "('abc', 34, True, 40, 'male')\n",
+      "('1', '2')\n"
      ]
     }
    ],
